--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 
     <footer>
         <p>&copy; 2025 Shishya. All rights reserved.</p>
-        <p><a href="privacy-policy.html">Privacy Policy</a></p>
+        <p><a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-service.html">Terms of Service</a></p>
     </footer>
 </body>
 </html>
