--- a/index.html
+++ b/index.html
@@ -314,6 +314,11 @@
                 <span>View our Privacy Policy</span>
                 <span>→</span>
             </a>
+            <a href="terms-of-service.html" class="privacy-link" style="margin-top: 10px;" onclick="showToast('Loading Terms of Service...')">
+                <span>📋</span>
+                <span>View our Terms of Service</span>
+                <span>→</span>
+            </a>
         </section>
 
         <!-- App Store Section -->
